plugins/kotlin/idea/tests/testData/highlighterMetaInfo/KDoc.kt.highlighting
// FIR_IDENTICAL
/**
 * @param <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KDOC_LINK'")!>x<!> foo and <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KDOC_LINK'")!>[baz]<!>
 * @param <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KDOC_LINK'")!>y<!> bar
 * @return notALink here
 */
fun <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>f<!>(<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>x<!>: <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_CLASS'")!>Int<!>, <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>y<!>: <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_CLASS'")!>Int<!>): <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_CLASS'")!>Int<!> {
return <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>x<!> + <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PARAMETER'")!>y<!>
}

fun <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>baz<!>() {}
